--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,46 @@
 {
-    "name": "devonliu/yii2-simple-cache-adapter",
-    "license": "MIT",
-    "type": "yii2-extension",
-    "authors": [
-        {
-            "name": "Devon Liu",
-            "email": "devonliu02@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "devonliu\\cache\\": "src"
-        }
+  "name": "wearesho-team/yii2-simple-cache-adapter",
+  "license": "MIT",
+  "type": "yii2-extension",
+  "authors": [
+    {
+      "name": "Devon Liu",
+      "email": "devonliu02@gmail.com"
     },
-    "autoload-dev": {
-        "psr-4": {
-            "devonliu\\cache\\tests\\": "tests"
-        }
-    },
-    "require": {
-        "yiisoft/yii2": "^2.0.0",
-        "psr/simple-cache": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.0.0",
-        "cache/integration-tests": "dev-master"
+    {
+      "name": "Alexander Letnikow",
+      "email": "reclamme@gmail.com"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Wearesho\\SimpleCache\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Wearesho\\SimpleCache\\Tests\\": "tests"
+    }
+  },
+  "require": {
+    "php": ">=7.1",
+    "yiisoft/yii2": "^2.0.0",
+    "psr/simple-cache": "^1.0",
+    "squizlabs/php_codesniffer": "^3.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.0.0",
+    "cache/integration-tests": "dev-master"
+  },
+  "config": {
+    "process-timeout": 1800,
+    "sort-packages": true,
+    "platform": {
+      "php": "7.1.3"
+    }
+  },
+  "scripts": {
+    "lint": "./vendor/bin/phpcs --standard=PSR2 ./src ./tests",
+    "test": "./vendor/bin/phpunit"
+  }
 }
