--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
   "require": {
     "php": ">=7.1",
     "yiisoft/yii2": "^2.0.0",
-    "psr/simple-cache": "^1.0",
-    "squizlabs/php_codesniffer": "^3.2"
+    "psr/simple-cache": "^1.0"
   },
   "require-dev": {
+    "cache/integration-tests": "dev-master",
     "phpunit/phpunit": "^5.0.0",
-    "cache/integration-tests": "dev-master"
+    "squizlabs/php_codesniffer": "^3.3.2"
   },
   "config": {
     "process-timeout": 1800,
