Add scrict types to Adapter and InvalidArgumentException.php

--- a/composer.json
+++ b/composer.json
@@ -20,23 +20,26 @@
   "autoload-dev": {
     "psr-4": {
       "Wearesho\\SimpleCache\\Tests\\": "tests"
-    }
+    },
+    "files": [
+      "vendor/yiisoft/yii2/Yii.php"
+    ]
   },
   "require": {
-    "php": ">=7.1",
-    "yiisoft/yii2": "^2.0.0",
+    "php": ">=7.4",
     "psr/simple-cache": "^1.0",
-    "squizlabs/php_codesniffer": "^3.2"
+    "yiisoft/yii2": "^2.0.35"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0.0",
-    "cache/integration-tests": "dev-master"
+    "cache/integration-tests": "^0.16.0",
+    "phpunit/phpunit": "^9.2",
+    "squizlabs/php_codesniffer": "^3.2"
   },
   "config": {
     "process-timeout": 1800,
     "sort-packages": true,
     "platform": {
-      "php": "7.1.3"
+      "php": "7.4"
     }
   },
   "scripts": {
