Fix linting issues

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=PSR2 ./src ./tests",
+    "phpcbf": "./vendor/bin/phpcbf --standard=PSR2 ./src ./tests",
     "test": "./vendor/bin/phpunit"
   }
 }
